# hebi_walker

./: README.md
libraries/hebi-cpp-3.3.0/custom_example/source/: hebi_api_test.cpp
matlab-sim/v2.5-controller_change/: README.txt  biped_lib.slx  bipedal.m  bipedal_robot.slx  bipedal_robot.slxc  bipedal_robot_CTRL2.slx  bipedal_robot_CTRL2.slxc  bipedal_robot_CTRL2_cgxe.mexa64  bipedal_robot_CTRL2_cgxe.mexw64  bipedal_robot_cgxe.mexa64  com_trajectory_gen.slxc  controller.slxc  dimensions.m  sim_settings.m
matlab-sim/v2.5-controller_change/backup/: bipedal_robot_buV2_4.slx
matlab-sim/v2.5-controller_change/c_source/magdwick/: magdwick.c  magdwick.h
matlab-sim/v2.5-controller_change/cad_models/gas_damper/: Damper1.stl  Damper2.stl  Damper3.stl  Damper4.stl
matlab-sim/v2.5-controller_change/cad_models/left_leg/: Link1L.stl  Link4L_rtbox.stl  Link5L.stl
matlab-sim/v2.5-controller_change/cad_models/remade_meshes/: Link1L_rem.stl  Link1R_rem.stl  Link2_rem.stl  Link3_rtbox_rem.stl  Link4L_rtbox_rem.stl  Link4R_rtbox_rem.stl  Link5L_rem.stl  Link5R_rem.stl  mesh_names.m  resave_meshes.m
matlab-sim/v2.5-controller_change/cad_models/right_leg/: Link1R.stl  Link4R_rtbox.stl  Link5R.stl
matlab-sim/v2.5-controller_change/cad_models/universal/: Link2.stl  Link3.stl  Link3_rtbox.stl  Link4.stl
matlab-sim/v2.5-controller_change/controller_grt_rtw/: build_exception.mat
matlab-sim/v2.5-controller_change/functions/: createGetter.m  create_robot_config.m  create_symbolic_function.m  create_symbolic_function2.m  group_motor_data.m  saturate_zmp.m
matlab-sim/v2.5-controller_change/functions/control/: fcn_bu.m  floating_base_orientation.m
matlab-sim/v2.5-controller_change/functions/models/: OBSOLETE_model_derivation.m  eulvel2genvel.m  form_Imat.m  model_derivation.m
matlab-sim/v2.5-controller_change/functions/robotics_toolbox/: alg_to_rtbox.m  create_robot_model.m  get_collision_geom.m  rtbox_to_alg.m
matlab-sim/v2.5-controller_change/saved_values/: INIT.mat  TrGen.mat  TrGenGainTuning.mat  masslist.mat
matlab-sim/v2.5-controller_change/symbolic_functions/: LJointNames.m  LLinkNames.m  RJointNames.m  RLinkNames.m
matlab-sim/v2.5-controller_change/testing/10_meas_frames/: meas_frames.slx  meas_frames.slxc  mf_setup.m
matlab-sim/v2.5-controller_change/testing/11_are_zmp_inv/: zmp_test.m
matlab-sim/v2.5-controller_change/testing/12_full_body_ikine/: ikine_setup_fmincon.m  ikine_setup_osqp.m  vis_sol_ikine.m
matlab-sim/v2.5-controller_change/testing/13_controller_remake/: controller.slx  controller_lib.slx  ctrl_ds_setup.m  ctrl_variants.m
matlab-sim/v2.5-controller_change/testing/1_conv_hull/: conv_hull.m
matlab-sim/v2.5-controller_change/testing/2_sensor_fusion/: rot_fusion.m
matlab-sim/v2.5-controller_change/testing/3_inertia_time_derivative/: in_time_der.m
matlab-sim/v2.5-controller_change/testing/4_wrench_distr/: eval_form_eq.m  sample_opt.m
matlab-sim/v2.5-controller_change/urdf/: BACKUPflorenceMatlab.urdf  OBSOLETE.florence.urdf  florenceMatlab.urdf  florenceRBDL.urdf  florenceROS.urdf  florenceROScmd.urdf  urdf_matlab2ros.m  urdf_test.m
walker_ros/src/: .rosinstall
walker_ros/src/florence_walker/: CMakeLists.txt  florence_ctrl_plugin.xml  package.xml
walker_ros/src/florence_walker/include/: Balancer.hpp  FloatingBaseEst.hpp  FlorenceFullController.hpp  FlorenceJointController.hpp  FlorenceVisNode.hpp  FullBodyIKine.hpp  MotorData.hpp  PatternGenerator.hpp  RobotBaseController.hpp  RobotInterface.hpp  Targets.hpp  TrajectoryGenerator.hpp  definitions.hpp  load_cell_array.h  magdwick.hpp  preview_settings.h
walker_ros/src/florence_walker/launch/: florence_calibration.launch  florence_controller_setup.launch  florence_visualisation.launch
walker_ros/src/florence_walker/launch/config/yaml/: Klqr.yaml  florence_walker.yaml  fs_offs.yaml  joint_offs.yaml
walker_ros/src/florence_walker/matlab/lqr_computation/: preview_for_ros.m  store_yaml.m
walker_ros/src/florence_walker/matlab/trajectory/matlab/: LinTrajGen.m  LinTrajGenRed.m  simple_trajectory.m  simple_trajectory.prj  traj1.m
walker_ros/src/florence_walker/matlab/trajectory/matlab/codegen/lib/LinTrajGenRed/: LinTrajGenRed.c  LinTrajGenRed.h  LinTrajGenRed_data.c  LinTrajGenRed_data.h  LinTrajGenRed_emxAPI.c  LinTrajGenRed_emxAPI.h  LinTrajGenRed_emxutil.c  LinTrajGenRed_emxutil.h  LinTrajGenRed_initialize.c  LinTrajGenRed_initialize.h  LinTrajGenRed_rtw.mk  LinTrajGenRed_rtwutil.c  LinTrajGenRed_rtwutil.h  LinTrajGenRed_terminate.c  LinTrajGenRed_terminate.h  LinTrajGenRed_types.h  codedescriptor.dmr  defines.txt  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  simple_trajectory.c  simple_trajectory.h
walker_ros/src/florence_walker/matlab/trajectory/matlab/codegen/lib/LinTrajGenRed/examples/: main.c  main.h
walker_ros/src/florence_walker/matlab/trajectory/matlab/codegen/lib/LinTrajGenRed/html/: report.mldatx
walker_ros/src/florence_walker/matlab/trajectory/matlab/codegen/lib/LinTrajGenRed/interface/: _coder_LinTrajGenRed_api.c  _coder_LinTrajGenRed_api.h  _coder_LinTrajGenRed_mex.c  _coder_LinTrajGenRed_mex.h
walker_ros/src/florence_walker/matlab/trajectory/matlab/codegen/mex/LinTrajGenRed_mex/html/: report.mldatx
walker_ros/src/florence_walker/src/: fb_speed_test.cpp  florence_controller.cpp  florence_fsm.cpp  fsen_calib.cpp  joint_offset_comp.cpp  lib_test.cpp
walker_ros/src/florence_walker/src/bal/: Balancer.cpp
walker_ros/src/florence_walker/src/ctrl/: FlorenceVisNode.cpp  RobotBaseController.cpp
walker_ros/src/florence_walker/src/ctrl/controllers/: FlorenceFullController.cpp  FlorenceJointController.cpp
walker_ros/src/florence_walker/src/est/: FloatingBaseEst.cpp  magdwick.cpp
walker_ros/src/florence_walker/src/hw/: MotorData.cpp  RobotInterface.cpp
walker_ros/src/florence_walker/src/ikine/: FullBodyIKine.cpp
walker_ros/src/florence_walker/src/pgen/: PG_test.cpp  PatternGenerator.cpp
walker_ros/src/florence_walker/src/tgen/: TG_test.cpp  TrajectoryGenerator.cpp
(+176 files in other folders)
