<?xml version="1.0"?>
<package format="2">
  <name>florence_walker</name>
  <version>0.0.0</version>
  <description>The florence_walker package</description>
  <maintainer email="andraz.frelih@tum.de">Andraz Frelih</maintainer>
  <license>Open Source</license>
  <author email="andraz.frelih@tum.de">Andraz Frelih</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>controller_manager_msgs</build_depend>
  <build_depend>tf</build_depend>
  <!--build_depend>libclass_loader</build_depend-->
  <build_export_depend>control_msgs</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>realtime_tools</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>controller_manager_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <!--build_export_depend>libclass_loader</build_export_depend-->
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>realtime_tools</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>controller_interface</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <!--exec_depend>libclass_loader</exec_depend-->

  <export>
    <controller_interface plugin="${prefix}/florence_ctrl_plugin.xml"/>
  </export>
</package>
